--- a/build.gradle
+++ b/build.gradle
@@ -36,18 +36,21 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	//Dependencias jwt
+	// JWT Dependencies
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-	//Dependencias de validaciones
+	// Validations
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
-	implementation 'org.hibernate.validator:hibernate-validator:7.0.2.Final'
 	implementation 'org.glassfish:jakarta.el:4.0.2'
-	//Dependencias de pasarela
-	implementation 'com.stripe:stripe-java:20.115.0'  // última versión
-
-
+	// Stripe Payment Gateway
+	implementation 'com.stripe:stripe-java:20.128.0'
+	// JSON Processing (Optional for Stripe)
+	//implementation ('com.google.code.gson:gson:2.10.1') {
+	//	force = true
+	//}
+	// Testing Utilities
+	testImplementation 'org.mockito:mockito-core:4.11.0'
 
 }
 
