--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 	//}
 	// Testing Utilities
 	testImplementation 'org.mockito:mockito-core:4.11.0'
+	implementation 'com.paypal.sdk:rest-api-sdk:1.14.0'
 
 }
 
