--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=mundoMagico
 
 # Configuración de la base de datos Mysql
-spring.datasource.url=jdbc:postgresql://localhost:5433/BD_Service_Ecommerce
-spring.datasource.username=postgres
-spring.datasource.password=982210
+spring.datasource.url = jdbc:mysql://localhost:3306/jugueteria2?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Driver y dialecto de PostgreSQL
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.format-sql=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.hikari.maximum-pool-size=10
